--- a/views/patron.html.twig
+++ b/views/patron.html.twig
@@ -2,6 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <title>Library Catalog</title>
     </head>
     <body>
@@ -10,12 +18,16 @@
            <ul>
            {% for patron in patrons %}
                    <h3>{{ patron.getName }}</h3>
-                    <p><a href="/patrons/{{ patron.getId }}/edit">Check Out a Book</a></p>
+                    <p><a href="/patron/{{ patron.getId }}/checkout">Check Out a Book</a></p>
+                    <form action="/patron/{{ patron.getId }}/delete" method="post">
+                      <input name="_method" type="hidden" value="delete">
+                      <button type="submit" name="button">Delete User</button>
+                    </form>
            {% endfor %}
            </ul>
        {% else %}
        <p>
-           No patrons added yet!
+           No patrons with that name have been added yet!
        </p>
        {% endif %}
         <p>
