--- a/views/checkout_searchbook.html.twig
+++ b/views/checkout_searchbook.html.twig
@@ -22,13 +22,16 @@
                    <ul>
                        {% for author in book.getAuthors %}
                        <li>{{ author.getFirstName }} {{ author.getLastName }}</li>
-                       <li>Copies of this book: {{ book.countCopies }}</li>
+                       <li>Copies of this book: {{ book.countCopies }} | Available: {{ book.countCheckout }}</li>
                        {% endfor %}
                    </ul>
                    {% else %}
                        <p>This book has no authors.</p>
                    {% endif %}
-                    <p><a href="/">Check this book out!</a></p>
+                    <form action="/checkout/{{ book.getId }}" method="get">
+                        <input id="patron_id" name="patron_id" type="hidden" value="{{ patron.getId }}">
+                      <button type="submit" name="button">Check this book out!</button>
+                    </form>
                    </form>
            {% endfor %}
            </ul>
