--- a/views/mybooks.html.twig
+++ b/views/mybooks.html.twig
@@ -21,6 +21,10 @@
                <ul>
                    {% for author in book.getAuthors %}
                    <li>{{ author.getFirstName }} {{ author.getLastName }}</li>
+                   <form action="/patron/{{ book.getId }}/return" method="post">
+                      <input id="patron_id" name="patron_id" type="hidden" value="{{ patron.getId }}">
+                     <button type="submit" name="button">Return Book</button>
+                   </form>
                   {% endfor %}
                 </ul>
                 {% endif %}
