added bootstrap and cleaned everything up

--- a/views/author_addbook.html.twig
+++ b/views/author_addbook.html.twig
@@ -18,7 +18,7 @@
          <form action="/author/{{ author.getId }}/addbook" method="post">
            <label for="title">Book Title</label>
            <input type="text" name="title" value="">
-           <button type="submit" name="button">Add book</button>
+           <button type="button" class="btn btn-primary" name="button">Add book</button>
          </form>
         <p>
             <a href="/">HOME</a>
