--- a/views/books.html.twig
+++ b/views/books.html.twig
@@ -40,7 +40,7 @@
         <form action="/books/search" method="get">
             <label for="title">Book Title</label>
             <input type="text" name="title">
-            <button type="submit" name="button">Search</button>
+            <button type="submit" class="btn btn-success" name="button">Search</button>
         </form>
         <p>
             <a href="/books/add">Add</a> a Book to the Catalog
