--- a/views/sign_in.html.twig
+++ b/views/sign_in.html.twig
@@ -18,14 +18,14 @@
         <form action="/patrons/add" method="post">
             <label for="name">Name</label>
             <input type="text" name="name" value="">
-            <button type="submit" name="button">Sign Up!</button>
+            <button type="submit" class="btn btn-primary" name="button">Sign Up!</button>
         </form>
 
         <h3>Look up your profile:</h3>
         <form action="/patrons/search" method="get">
             <label for="name">Name:</label>
             <input type="text" name="name">
-            <button type="submit" name="button">Search</button>
+            <button type="submit" class="btn btn-success" name="button">Search</button>
         </form>
     </body>
 </html>
