--- a/views/books_add.html.twig
+++ b/views/books_add.html.twig
@@ -22,7 +22,7 @@
             <input type="text" name="first_name">
             <label for="last_name">Author Last Name</label>
             <input type="text" name="last_name">
-            <button type="submit" name="button">Add</button>
+            <button type="button" class="btn btn-primary" name="button">Add</button>
         </form>
 
         <p>
