--- a/views/checkout_searchauthor.html.twig
+++ b/views/checkout_searchauthor.html.twig
@@ -22,7 +22,10 @@
                    <ul>
                        {% for book in author.getBooks %}
                        <li>{{ book.getTitle }} | # of copies: {{ book.countCopies }} </li>
-                       <p><a href="/">Checkout this book</a></p>
+                       <form action="/checkout/{{ book.getId }}" method="get">
+                           <input id="patron_id" name="patron_id" type="hidden" value="{{ patron.getId }}">
+                         <button type="submit" class="btn btn-primary" name="button">Check this book out!</button>
+                       </form>
                        {% endfor %}
                    </ul>
                    {% else %}
