--- a/views/checkout_searchbook.html.twig
+++ b/views/checkout_searchbook.html.twig
@@ -30,9 +30,8 @@
                    {% endif %}
                     <form action="/checkout/{{ book.getId }}" method="get">
                         <input id="patron_id" name="patron_id" type="hidden" value="{{ patron.getId }}">
-                      <button type="submit" name="button">Check this book out!</button>
+                      <button type="submit" class="btn btn-primary" name="button">Check this book out!</button>
                     </form>
-                   </form>
            {% endfor %}
            </ul>
        {% else %}
